tests/NormalTests/paczka1/fuzzy1/20682669.err
Error in line 4: QN7NvIbhR S492 84,2
Error in line 6: S670 S670 435,5
Error in line 16: rXkg S670 80,Y
Error in line 12: rXkg S492 29,5
Error in line 18: XUfUh S492 194,97
Error in line 17: rXkg S670 48,9
Error in line 24: cGM A939 13,2
Error in line 32: 6Ts S570 172,7
